--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
       <h1> WELCOME TO <span class="colorchange">CAFE BREWERS BAY.</span><br>
         PIONEER OF COFFEE CULTURE. </h1>
       <a href="Menu.html" class="btn btn-full"> Click here to Order</a>
-      <a href="ragister.html" class="btn btn-nav">Register here</a>
+      <a href="Ragister.html" class="btn btn-nav">Register here</a>
       <p id="p">In the heart of Satna sits Cafe , almost like a tree house.<br>
         Sitting on its terrace watching one of the most <br>
         spectacular sunsets, you can almost forget that you are actually<br>
